# algos_minitasks

./: .clangd  .gitignore  .gitmodules  README.md  task_1.cpp  task_10.cpp  task_14.cpp  task_18.cpp  task_2.cpp  task_26.cpp  task_28.cpp  task_29.cpp  task_35.cpp  task_36.cpp  task_38.py  task_39.py  task_4.py  task_40.py  task_42.py  task_43.py  task_44.py
task_12|13/: hoare.h  improved_lomuto.h  lomuto.h  main.cpp
task_15/: array_list.h  main.cpp
task_18/: build.zig  main  main.cpp  parser.cpp  parser.h
task_18/src/: main.zig  parser.zig
task_21/: CMakeLists.txt  b_heap.hpp  binomial_heap.hpp  main.cpp
task_28/: filter.cpp  script.py
task_28/execs/: filter
task_34/: Makefile  main.cpp
task_34/tests/: 11.in
task_9/: method_1.cpp  method_2.cpp  method_3.cpp  report.txt  script.py
task_9/execs/: method_1  method_2  method_3
